<resources>
    <string name="app_name">Simple Survey App</string>
    <string name="survey_greeting">Survey Question</string>
    <string name="start_survey">Start Survey</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="place_holder_number">20</string>
    <string name="new_survey_button_text">New Survey</string>
    <string name="no_survey_question">Please enter a yes or no question to ask.</string>
    <string name="results_button_text">Show Results</string>
    <string name="result_text_view">Results</string>
    <string name="yes_header">Yes Answers</string>
    <string name="no_header">No Answers</string>
    <string name="reset_button_text">Reset Answers</string>
    <string name="continue_survey_button_text">Continue Survey</string>
    <string name="activity_warning">Survey was not reset, please reset results and then hit continue.</string>
</resources>